--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <li><a href="#about">О нас</a></li>
                             <li><a href="#contacts">Контакты</a></li>
                             <li><a href="#features">Функционал</a></li>
-                            <li><a href="benifist">Преимущества проет</a></li>
+                            <li><a href="#benifist">Преимущества проет</a></li>
                             <li><a href="#customer">Отзывы клиентов</a></li>
                             <li><a href="#demo">Демо</a></li>
                         </ul>
